--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -1,3 +1,26 @@
+Changes in version 1.3-0
+
+  o The method "getModel", "momentEstim" is now used also for the gel procedure.
+  o The GEL procedure as been modified. For the case in which the option smooth=TRUE is used, 
+    the appropriate scaling parameters have been added following Smith(2004) in the estimation, the covariance matrix of the Lagrange 
+    multiplier and the tests of over-identifying restrictions. In this case, only the kernels Truncated and Bartlett are available. 
+    For the former, the optimal bandwidth of Andrews(91) for Bartlett is used and for the latter, it is the bandwidth proposed
+    for the Parzen. See Smith(2004) for more details. Also, the option vcov as been removed since it is irrelevant for GEL. By setting smooth to
+    FALSE, it is implied that the data are iid.     
+
+Changes in version 1.2-0
+
+The following modifications were suggested by the reviewers of JSS. These changes will not be noticed by users. They are intended to make it easier for 
+developpers to contribute. 
+
+  o The new method specTest computes the specification tests from objects created by "gmm" or "gel" 
+  o The structure of the package has been modified in order to make it more flexible. The changes include:
+         o The new method "getModel" prepares the estimation. It creates what is required by the method "momentEstim".
+         o The method "momentEstim" estimates the model defined by "getModel"
+         o The method "FinRes" finalizes the estimation when it is needed. For now, the method is used only by "gmm" to compute the final resutls.
+  o Some bugs are fixed  
+  o The Vignette has been modified a little and the errors in the manual corrected.
+
 Changes in version 1.1-0
 
 
