--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -7,6 +7,8 @@ Changes in version 1.3-0
     For the former, the optimal bandwidth of Andrews(91) for Bartlett is used and for the latter, it is the bandwidth proposed
     for the Parzen. See Smith(2004) for more details. Also, the option vcov as been removed since it is irrelevant for GEL. By setting smooth to
     FALSE, it is implied that the data are iid.     
+  o It is now possible to give names to the parameters when the model is nonlinear. It is done through the starting values. For example
+    res <- gmm(..., t0 = c(mu=0,sig=1) ,...
 
 Changes in version 1.2-0
 
