--- a/pkg/gmm/inst/doc/empir.bib
+++ b/pkg/gmm/inst/doc/empir.bib
@@ -1,3 +1,4 @@
+
 @article{jagannathan-skoulakis02,
   AUTHOR={Jagannathan, R. and Skoulakis, G.},
   TITLE={Generalized Method of Moments: Applications in Finance},
@@ -161,7 +162,8 @@ year = {1987},
   VOLUME={16},
   PAGES={1-16},
   YEAR={2006},
-  Number={9}
+  Number={9},
+  url={http://www.jstatsoft.org/v16/i09/}
  }
 
 @Book{luenberger97,
