--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -6,6 +6,8 @@ Changes in version 1.3-2
  o The option weightsMatrix has beed added to the gmm function. It allows to fixe the matrix of weights.
  o The methods bread() and estfun() are now available for gmm objects. It allows to compute a sandwich covariance matrix which 
    is required if the weighting matrix is not the optimal one.
+ o The results are obtained even if the covariance matrix cannot be computed
+ o The vignette has been updated.
 
 Changes in version 1.3-0
 
