--- a/pkg/gmm/inst/doc/empir.bib
+++ b/pkg/gmm/inst/doc/empir.bib
@@ -166,6 +166,17 @@ year = {1987},
   url={http://www.jstatsoft.org/v16/i09/}
  }
 
+@article{zeileis04,
+  AUTHOR={Zeileis, A.},
+  TITLE={Econometric Computing with HC and HAC Covariance Matrix Estimators},
+  JOURNAL={Journal of Statistical Software},
+  VOLUME={11},
+  PAGES={1-17},
+  YEAR={2004},
+  Number={10},
+  url={http://www.jstatsoft.org/v11/i10/}
+ }
+
 @Book{luenberger97,
 author = {Luenberger, D. G.},
 title = {Optimization by Vector Space Methods},
