--- a/pkg/gmm/inst/doc/empir.bib
+++ b/pkg/gmm/inst/doc/empir.bib
@@ -166,6 +166,17 @@ year = {1987},
   url={http://www.jstatsoft.org/v16/i09/}
  }
 
+@article{chausse10,
+  title        = {Computing Generalized Method of Moments and Generalized Empirical Likelihood with R},
+  author       = {Pierre Chauss{\'e}},
+  journal      = {Journal of Statistical Software},
+  year         = {2010},
+  volume       = {34},
+  number       = {11},
+  pages        = {1-35},
+  url          = {http://www.jstatsoft.org/v34/i11/}
+}
+
 @article{zeileis04,
   AUTHOR={Zeileis, A.},
   TITLE={Econometric Computing with HC and HAC Covariance Matrix Estimators},
