--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -1,3 +1,9 @@
+Changes in version 1.3-4
+
+ o It is now possible to enter the instruments in x either as a matrix 
+   (like before) or as a formula. See details and examples in gmm help  
+
+
 Changes in version 1.3-3
 
  o It is a very small modification to avoid errors in the installation. The function linear.hypothesis of the car package is now deprecated. They have be changed to linearHypothesis. 
