Added the option data= to gmm() to avoid attaching variables. The rest is related to this change
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@33 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -2,6 +2,9 @@ Changes in version 1.3-4
 
  o It is now possible to enter the instruments in x either as a matrix 
    (like before) or as a formula. See details and examples in gmm help  
+o  A data argument is added to the gmm function. Therefore, it is no longer required 
+   that the variables in data.frames be attached before using gmm(). You just need to add the option data=your_data.frame.   
+
 
 
 Changes in version 1.3-3
