--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -1,6 +1,10 @@
+Changes in version 1.3-5
+
+o Bug fixed when estimating linear model with Z=X (OLS with robust matrix)
+
 Changes in version 1.3-4
 
- o It is now possible to enter the instruments in x either as a matrix 
+o It is now possible to enter the instruments in x either as a matrix 
    (like before) or as a formula. See details and examples in gmm help  
 o  A data argument is added to the gmm function. Therefore, it is no longer required 
    that the variables in data.frames be attached before using gmm(). You just need to add the option data=your_data.frame.   
