--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -5,7 +5,12 @@ o The method for GMM-CUE has been modified. Before, the weights for the kernel e
   values provided by the user (for linear cases) or the first step GMM. 
 o You can now trace the convergence of the iterative GMM with the option traceIter=T
 o The weights for the kernel are also fixed for iter-GMM. It is faster and I don't think it should change at each iteration. I am open to comments on that.
-s
+o A function tsls() has been added to facilitate the estimation by 2SLS. The user does not have to worry about selecting the right gmm options
+o summary and print Methods have been added for tsls objects. The summary prints the f-statistics of the first stage LS
+o SmoothG for GEL uses now the kernapply() function which is more efficient.
+o Something the GMM converge to weird values which is sometimes caused by bad first step estimates used to compute the weighting matrix. 
+  Summary() prints the initial values to have more infortmation when convergence fails.
+o There was a bug in specTest() for GEL.  The degrees of freedom for the J-test were wrong. It is fixed.
 
 Changes in version 1.3-8
 
