--- a/pkg/gmm/inst/doc/gmm_with_R.rnw
+++ b/pkg/gmm/inst/doc/gmm_with_R.rnw
@@ -219,6 +219,8 @@ The \code{summary} method prints more results from the estimation:
 <<>>=
 summary(res)
 @
+The section "Initial values of the coefficients" shows the first step estimates used to either compute the weighting matrix in the 2-step GMM or the fixed bandwidth in CUE or iterative GMM.
+
 The J-test of over-identifying restrictions can also be extracted by using the method \code{specTest}:
 <<>>=
 specTest(res)
@@ -299,7 +301,7 @@ The result is not very close to the true parameters. But we can see why by looki
 <<>>=
 summary(res)
 @
-The null hypothesis that the moment conditions are satisfied is rejected. For nonlinear models, a significant J-test may indicate that we have not reached the global minimum. Furthermore, the standard deviations of the coefficients indicate that the covariance matrix is singular. We could try different starting values or use \code{nlminb} which allows to put restrictions on the parameter space. The former would work but the latter will allow us to see how to select another optimizer. The option \code{optfct} can be modified to use this algorithm instead of \code{optim}. In that case, we can specify the upper and lower bounds of $\theta$. 
+The null hypothesis that the moment conditions are satisfied is rejected. For nonlinear models, a significant J-test may indicate that we have not reached the global minimum. Furthermore, the standard deviation of the coefficient of $\delta$ indicates that the covariance matrix is nearly singular. Notice also that the convergence code is equal to 1, which indicates that the algorithm did not converge. We could try different starting values, increase the number of iterations in the control option of \code{optim} or use \code{nlminb} which allows to put restrictions on the parameter space. The former would work but the latter will allow us to see how to select another optimizer. The option \code{optfct} can be modified to use this algorithm instead of \code{optim}. In that case, we can specify the upper and lower bounds of $\theta$. 
 <<>>= 
 res2 <- gmm(g2,x2,t0,optfct="nlminb",lower=c(0,-1,0,-Inf),upper=c(2,1,Inf,Inf))
 summary(res2)
@@ -307,17 +309,17 @@ summary(res2)
 We conclude this example by estimating the parameters for a vector of stock returns from the data set \code{Finance} that comes with the \pkg{gmm} package.
 <<>>=
 data(Finance)
-x3 <- Finance[1:500,"WMK"]
+x3 <- Finance[1:1500,"WMK"]
 t0<-c(alpha = 2, beta = 0, gamma = sd(x3)/sqrt(2),delta = 0)
-res3 <- gmm(g2,x3,t0,optfct="nlminb",lower=c(0,-1,0,-Inf),upper=c(2,1,Inf,Inf))
+res3 <- gmm(g2,x3,t0,optfct="nlminb")
 summary(res3)
 @
-For this sub-sample, the hypothesis that the return follows a stable distribution is not rejected. The normality assumption can be analyzed  by testing $H_0:\alpha=2,~\beta=0$ using \code{linearHypothesis} from the \pkg{car} package:
+For this sub-sample, the hypothesis that the return follows a stable distribution is  rejected. The normality assumption can be analyzed  by testing $H_0:\alpha=2,~\beta=0$ using \code{linearHypothesis} from the \pkg{car} package:
 <<>>=
 library(car)
 linearHypothesis(res3,cbind(diag(2),c(0,0),c(0,0)),c(2,0))
 @
-It is clearly rejected. The result is even stronger if the whole sample is used. In that case, the stable distribution hypothesis is also rejected.
+It is clearly rejected. The result is even stronger if the whole sample is used. 
 
 \subsection{A linear model with iid moment conditions}
 
@@ -445,7 +447,7 @@ diag(vcov(res3))^.5
 diag(vcov(res4))^.5
 diag(vcov(res5))^.5
 @
-which shows, for this example, that the Bartlett kernel generates the estimates with the smallest variances. 
+which shows, for this example, that the Bartlett kernel generates the estimates with the smallest variances. However, it does not mean it is better. We have to run simulations and compute the true variance if we want to compare them. In fact, we do not know which one produces the most accurate estimate of the variance. 
 
 The second options is for the bandwidth selection. By default it is the automatic selection proposed by \cite{andrews91}. It is also possible to choose  the automatic selection of \cite{newey-west94} by adding \code{bw=bwNeweyWest} (without quotes because \code{bwNeweyWest} is a function). A prewhitened kernel estimator can also be computed using the option \code{prewhite=p}, where $p$ is the order of the vector auto-regressive (VAR) used to compute it.  By default, it is set to \code{FALSE}. \cite{andrews-monahan92} show that a prewhitened kernel estimator improves the properties of hypothesis tests on parameters. 
 
