Changed the vignette to adapt to the new version
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@46 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm/inst/doc/empir.bib
+++ b/pkg/gmm/inst/doc/empir.bib
@@ -81,12 +81,12 @@ year = {2001},
 }
 
 @article{chausse09,
-  AUTHOR={Chaussé, P.},
+  AUTHOR={Chauss\'e, P.},
   TITLE={Computing Generalized Empirical Likelihood and Generalized Method of Moments with R},
-  JOURNAL={},
+  JOURNAL={Working Paper, University of Waterloo},
   VOLUME={},
   PAGES={},
-  YEAR={2009},
+  YEAR={2011},
   Number={}
  } 
 
@@ -104,12 +104,12 @@ year = {2001},
 
 
 @article{chausse08,
-  AUTHOR={Chaussé, P.},
+  AUTHOR={Chauss\'e, P.},
   TITLE={Generalized Emprical Likelihood for a Continuum of Moment Conditons},
-  JOURNAL={In revision for the Journal of Econometrics},
+  JOURNAL={Working Paper, University of Waterloo},
   VOLUME={},
   PAGES={},
-  YEAR={2009},
+  YEAR={2011},
   Number={}
  } 
 
@@ -565,7 +565,7 @@ OPTannote = {}
     title = {gmm: Generalized Method of Moments and Generalized Empirical Likelihood},
     author = {Pierre Chausse},
     year = {2009},
-    note = {R package version 1.1-1},
+    note = {R package version 1.4-0},
   }
  @Manual{fBasics,
     title = {fBasics: Rmetrics - Markets and Basic Statistics},
