--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -27,6 +27,7 @@ o Sometimes, problems happen in GMM estimation because of the bad first step est
   The first step estimates are usually computed using the identity matrix. The vector is now printed for better control. 
 o Cleaned the codes. The data are in object$dat and we can get the moment matrix by calling gt <- object$g(object$coef,object$dat) for linear and 
   non-linear models, where object is of class gmm.
+o We can now impose equality constraints of the type theta_i=c_i with the option eqConst=. See help(gmm) which includes examples.
 
 Changes in version 1.3-8
 
