--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -28,6 +28,7 @@ o Sometimes, problems happen in GMM estimation because of the bad first step est
 o Cleaned the codes. The data are in object$dat and we can get the moment matrix by calling gt <- object$g(object$coef,object$dat) for linear and 
   non-linear models, where object is of class gmm.
 o We can now impose equality constraints of the type theta_i=c_i with the option eqConst=. See help(gmm) which includes examples.
+o The K statistics for weakly identified models of Kleiberben (2005) has been added. See ?KTest.
 
 Changes in version 1.3-8
 
