--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -29,6 +29,11 @@ o Cleaned the codes. The data are in object$dat and we can get the moment matrix
   non-linear models, where object is of class gmm.
 o We can now impose equality constraints of the type theta_i=c_i with the option eqConst=. See help(gmm) which includes examples.
 o The K statistics for weakly identified models of Kleiberben (2005) has been added. See ?KTest.
+o (gmm only) The bandwidth for the HAC estimation is set by the first step estimate. Its value, along with the weights, 
+  is saved in attr(obj$w0,"Spec"). If the user is not satisfied with this automatic bw selection, bw can be set to any fixed number when
+  calling gmm(). See ?gmm for more details and examples.
+o The function gmmWithConst() reestimate an unrestricted model by imposing linear constraints, using the same specification. It also use the same bandwidth for
+  the estimation os the HAC matrix
 
 Changes in version 1.3-8
 
