Replaced fBasics by stabledist
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@61 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -3,6 +3,7 @@ Changes in version 1.4-3
 o Added the option "constrOptim" to optfct for nonlinear models
 o Added the option "eqConstFullVcov" to gmm() to allow the computation the covariance matrix of all coefficients including 
   the constrained ones (see ?gmm for details and examples).
+o Removed the dependency on fBasics and replaced it with stabledist
 
 Changes in version 1.4-2
 
