--- a/pkg/gmm/inst/doc/empir.bib
+++ b/pkg/gmm/inst/doc/empir.bib
@@ -574,6 +574,13 @@ OPTannote = {}
     note = {R package version 2100.78},
     url = {http://CRAN.R-project.org/package=fBasics},
   }
+ @Manual{stabledist,
+    title = {stabledist: Stable Distribution Functions},
+    author = {Diethelm Wuertz and Martin Maechler and Rmetrics core team members.},
+    year = {2012},
+    note = {R package version 0.6-4},
+    url = {http://CRAN.R-project.org/package=stabledist},
+  }
 
  @Manual{mvtnorm,
     title = {mvtnorm: Multivariate Normal and t Distributions},
