--- a/pkg/gmmExtra/NEWS
+++ b/pkg/gmmExtra/NEWS
@@ -2,3 +2,12 @@ Starting version 0.0-1
 
 o The package only include KConf for now. It has been removed from the gmm package because of the dependency on multicore which is not available on Windows.
   It is very experimental for now.
+
+Changes in version 0.0-2
+
+o The dependency on multicore has been replaced by the package parallel. It allows the package to be built for windows
+
+o bootstrapping methods have been added. The object from the main function bootGmm() can be used to obtain bootstrap p-value for 
+  linear hypothesis tests and J-test
+
+
