replaced is.real by is.double
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@68 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -1,3 +1,7 @@
+Changes in version 1.4-5
+
+o Replaced the deprecated function real(), is.real() and as.real() by double()
+
 Changes in version 1.4-4
 
 o Fixed an instability problem when the model is just identified and wmatrix is set to "ident"
