Added data option to gel()
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@69 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -1,3 +1,7 @@
+Changes in version 1.4-6
+
+o Added the possibility of providing data.frame() with formula to gel()
+
 Changes in version 1.4-5
 
 o Replaced the deprecated function real(), is.real() and as.real() by double()
